package uml;

public class IDCard {
}
