package uml;

public class Person {
    IDCard idCard;
}
